--- a/source/_posts/开启新篇章.md
+++ b/source/_posts/开启新篇章.md
@@ -4,7 +4,8 @@ abbrlink: 623076367
 date: 2021-09-19 13:20:52
 tags:
 ---
-芜湖~博客总算施工完成了（ 此处应该疯狂点鼠标）
+芜湖~博客总算施工完成了
+<!-- more -->
 过程十分艰难，因为用的是比较偏门的ocean主题没啥教程资源 网上一搜满大街的next主题 不过相中了 没办法 自己选的主题 只能硬着头皮配完  
 只能疯狂Google 找别人造的轮子 一路摸爬滚打
 由于不懂前端知识，有时候出错了就只能靠猜 各种排列组合 懂我意思吧
