--- a/themes/ocean/languages/zh-CN.yml
+++ b/themes/ocean/languages/zh-CN.yml
@@ -15,6 +15,7 @@ newer: 前一篇
 older: 后一篇
 share: 分享
 powered_by: Powered by
-rss_feed: RSS Feed
-tag: Tag
-theme: Theme
+rss_feed: RSS 订阅
+tag: 标签
+theme: 主题
+Read_More...: 阅读全文
