--- a/source/_posts/近况.md
+++ b/source/_posts/近况.md
@@ -7,4 +7,4 @@ tags:
 ---
 动态更新
 <!-- more -->
-最近由于疫情封校，很多活动都停掉了，但对我来说反倒是个契机，毕竟不用敷衍地去教室上课，网课挂着就行，疯狂划水，也没有球可以打了，这样就能学更多更多想要学的东西了。舍友打游戏倒还好，有时有事没事过来问候两句简直没法学 所以就去实验室学习 （其实就是个特殊的自习室）但学校说不让去 就绕路避开保安嘿嘿，中午去食堂打个饭再回来继续战斗，晚上十点门禁 所以就九点四十回去，然后早睡早起。美好的一天如此循环往复。欧耶！
+事情一直很多，加上要写的东西也很多 所以先托托。。。
